--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,43 @@ dependencies {
     // Multidex
     implementation 'com.android.support:multidex:1.0.3'
 
+    // Libs Support
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+
+    // RecyclerView: lib para listas
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    // CardView: lib para criar cartões (cards)
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
+    // Picasso: lib para download de imagens
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.android.support:support-v4:27.1.1'
+
+    // Google-GSON
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
+    // Bus de Eventos
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    //RX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+
+    // Google Play Services
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
