--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.anko_version = '0.10.5'
+    ext.room_version = '1.1.0-rc1'
     repositories {
         google()
         jcenter()
